# HeteroG

./: .gitattributes  .gitmodules  .gitsubmodule  Cargo.toml  README.md  _snippets.py  alexnet.py  b.py  estimator.py  evaluate_simulator.py  evaluate_simulator_memory.py  gen.py  gen_models.py  gen_optimal.py  i.py  lenet.py  main.py  memory.jl  mlp.py  mlp_tf2.py  optimal.py  optimal2.py  pack.sh  profiler.py  s0.py  specs.py  temp  test.py  test_collective.py  test_random_input.py  tge.py  transfer.py  transfer2.py  transfer_regression.jl  utils.py  vgg19.py  worker.py
GAT/: activater.py  adapt_cost_model.py  anaysis_strategy.py  config.txt  estimator_test.py  execute_cora.py  global_analysis.py  main.py  modify_test.py  nccl_worker.py  prepare_graphdef_input.py  print_status.py  process_prof.py  test.py  tf2gat.py  unit_test.py
deprecated/: evaluate_simulator.py  evaluate_simulator_memory_single.py  lenet.py  multithreaded_simulator.rs  plot_nccl.jl  record_memory.py  s1.py  test_collective.py  transfer_regression.jl
device-centric/: data.py  environment.py  model.py  predict.py  train.py
dt/: dt.py  gen_model.py  tge.py  worker.py
gnn/: data.py  environment.py  exp.py  gen_raw_data.py  main.py  mcts.py  model.py  model_big.py  predict.py  sa.py  search.py  train.py
gnn_old/: environment.py  predict.py  search.py  train.py
gnn_s/: data.py  environment.py  gen_raw_data.py  model.py  search.py  train.py
src/: editor.rs  graph.rs  lib.rs  main.rs  misc.rs  optimal.rs  polishing.rs  scheduler.rs  simulator.rs  strategy.rs
test/: cifar.py  measure_tge.py  (+3 more)
(+50 files in other folders)
