[package]
name = "tge"
version = "0.1.0"
authors = ["Shiwei Zhang <ylxdzsw@gmail.com>"]
edition = "2018"

[lib]
name = "tge"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = 'abort'

[dependencies]
protobuf = "=2.10.2"
taken = "0.1"
crossbeam-channel = "0.4"
oh-my-rust = { git = "https://github.com/ylxdzsw/oh-my-rust" }
scoped = { git = "https://github.com/ylxdzsw/scoped" }
